bugfix small screen overflow plane right side

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -107,6 +107,10 @@ body {
     width: 100%;
 }
 
+.background {
+    overflow: hidden;
+}
+
 .clockContainer {
     font-size: 5vw;
     display: grid;
